# Legal

./: .gitignore  CONTRIBUTING.md  README.md  WORKFLOW.md  agents.md  package-lock.json  package.json  system.md
ai_service/: pyproject.toml
ai_service/app/: config.py  main.py  schemas.py
ai_service/app/handlers/: case_summary.py  client_update.py  deadline_extract.py  invoice_draft.py  matter_summary.py
ai_service/app/prompts/: case_summary.txt  client_update.txt  deadline_extract.txt  invoice_draft.txt  matter_summary.txt
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/integrations/: search.py  storage.py
backend/app/middleware/: audit.py  auth.py
backend/app/models/: ai.py  audit.py  auth.py  billing.py  case.py  comms.py  document.py  matter.py
backend/app/routers/: __init__.py  auth.py  billing.py  cases.py  clients.py  documents.py  events.py  matters.py  messages.py  notes.py  tasks.py  users.py  webhooks.py
backend/app/schemas/: ai.py  auth.py  billing.py  case.py  comms.py  document.py  matter.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  billing_service.py  case_service.py  document_service.py  matter_service.py  notification_service.py
backend/app/tests/: conftest.py  test_auth.py  test_billing.py  test_cases.py  test_documents.py  test_matters.py  test_webhooks.py
backend/app/workers/: celery_app.py  notifications.py  ocr.py  reconciliation.py  scheduled.py
docs/: API.md  (+13 more)
(+366 files in other folders)
